--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,6 +17,8 @@ $green-color-dark:    #009f06 !default;
 $green-color-light:   #ddffdd !default;
 $green-color-bright:  #11D68B !default;
 $purple-color:        #B509AC !default;
+$uw-color:            #4b2e83 !default; 
+$uw-gold-color:       #85754d !default;
 $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
